--- a/altair_object_store.ditamap
+++ b/altair_object_store.ditamap
@@ -22,7 +22,7 @@
     <keydef keys="version">
         <topicmeta>
             <keywords>
-                <keyword>2022.1.0</keyword>
+                <keyword>2023.1.0</keyword>
             </keywords>
         </topicmeta>
     </keydef>
@@ -44,6 +44,7 @@
     <topicref href="topics/install/object_store_install_t.dita"/>
 
     <topicref href="topics/get_started/vs_code_integration_r.dita"/>
+    <topicref href="topics/get_started/vs_code_integrate_register_t.dita"/>
 
     <topicref href="topics/configuration/application_create_r.dita"/>
     
@@ -66,6 +67,43 @@
         <topicref href="topics/object_store_apis/upload_packages_t.dita"/>
         <topicref href="topics/object_store_apis/content_definition_usage_t.dita"/>
         <topicref href="topics/application/application_access_t.dita"/>
+    </topicref>
+    <topicref href="topics/configuration/application_create_hpc_r.dita">
+        <topicref href="topics/configuration/dt_workflow_code_r.dita">
+            <topicref href="topics/application/dt_create_project_r.dita"/>
+            <topicref href="topics/application/dt_upload_project_model_r.dita"/>
+            <topicref href="topics/application/dt_run_mde_generate_model_r.dita"/>
+            <topicref href="topics/application/dt_get_json_model_r.dita"/>
+            <topicref href="topics/application/dt_add_module_r.dita"/>
+            <topicref href="topics/application/dt_assign_parts_to_module_r.dita"/>
+            <topicref href="topics/application/dt_add_application_r.dita"/>
+            <topicref href="topics/application/dt_upload_application_r.dita"/>
+            <topicref href="topics/application/dt_edit_application_r.dita"/>
+            <topicref href="topics/application/dt_generate_report_r.dita"/>
+        </topicref>
+        <topicref href="topics/application/dt_execute_action_r.dita">
+            <topicref href="topics/application/dt_action_get_project_r.dita"/>
+            <topicref href="topics/application/dt_action_create_project_r.dita"/>
+            <topicref href="topics/application/dt_action_get_project_name_r.dita"/>
+            <topicref href="topics/application/dt_action_upload_project_r.dita"/>
+            <topicref href="topics/application/dt_action_run_mde_r.dita"/>
+            <topicref href="topics/application/dt_action_add_modules_r.dita"/>
+            <topicref href="topics/application/dt_action_add_application_model_r.dita"/>
+            <topicref href="topics/application/dt_action_edit_model_r.dita"/>
+            <topicref href="topics/application/dt_action_generate_report_r.dita"/>
+        </topicref>
+        <topicref href="topics/configuration/execute_action_digital_twin_r.dita">
+            <topicref href="topics/application/dt_mount_altair_drive_r.dita"/>
+            <topicref href="topics/application/dt_access_mount_files_r.dita"/>
+            <topicref href="topics/application/dt_get_application_path_r.dita"/>
+            <topicref href="topics/application/dt_running_mde_r.dita"/>
+            <topicref href="topics/application/dt_execute_solve_r.dita"/>
+            <topicref href="topics/application/dt_editing_application_r.dita"/>
+            <topicref href="topics/application/dt_copy_file_altair_drive_r.dita"/>
+            <topicref href="topics/application/upload_file_server_r.dita"/>
+            <topicref href="topics/application/set_custom_metadata_r.dita"/>
+            <topicref href="topics/application/search_content_metadata_r.dita"/>
+        </topicref>
     </topicref>         
     
 
