--- a/topics/get_started/object_store_features_r.dita
+++ b/topics/get_started/object_store_features_r.dita
@@ -2,9 +2,10 @@
 <!DOCTYPE reference PUBLIC "-//OASIS//DTD DITA Reference//EN" "reference.dtd">
 <reference id="reference_ogh_541_wtb">
     <title><keyword keyref="product"/> Features</title>
-    <shortdesc> Altair Object Store is an advanced content management system that combines the
-        capabilities of numerous services and an action execution engine that applies Access Control
-        List (ACL) and other authorization policies for enhanced security.</shortdesc>
+    <shortdesc> Altair <keyword keyref="product"/> is an advanced content management system that
+        combines the capabilities of numerous services and an action execution engine that applies
+        Access Control List (ACL) and other authorization policies for enhanced
+        security.</shortdesc>
     <refbody>
         <section id="section_yht_pp1_wtb">
             <p>The main features of the <keyword keyref="product"/> are:<ul id="ul_etr_qp1_wtb">
