--- a/topics/application/dt_run_mde_generate_model_r.dita
+++ b/topics/application/dt_run_mde_generate_model_r.dita
@@ -17,19 +17,15 @@
 from altair.system import Fs, Content
 from altair.system import ActionExecOptions, WaitForActionCompletion
 
-# Specific where to run the MDE i.e on which Appliance
-        execOptions = ActionExecOptions(execEnvFilter={"path": "$.name", "value": "Sessions"})
+<b># Specific where to run the MDE i.e on which Appliance</b>
+execOptions = ActionExecOptions(execEnvFilter={"path": "$.name", "value": "Sessions"})
 
-# Execute Preview Gen MDE for the given model file
-        mdeAction = await GeneratePreview(inputFile=modelFile.getRef(), session=session, execOptions=execOptions)
+<b># Execute Preview Gen MDE for the given model file</b>
+mdeAction = await GeneratePreview(inputFile=modelFile.getRef(), session=session, execOptions=execOptions)
 
-# Wait for MDE to complete since it’s a long running action.
-# Alternately, we can subscribe to event handler instead of waiting here. 
-For event handlers, Refer section : x.x
-        mdeActionOutput = await WaitForActionCompletion(mdeAction, timeout=300)
-
-Note: the above code will be moved under HPC actions section later with a reference here
-</codeblock></p>
+<b># Wait for MDE to complete since it’s a long running action.
+# Alternately, we can subscribe to event handler instead of waiting here.</b> 
+mdeActionOutput = await WaitForActionCompletion(mdeAction, timeout=300)</codeblock></p>
         </section>
     </refbody>
 </reference>
