--- a/topics/application/dt_running_mde_r.dita
+++ b/topics/application/dt_running_mde_r.dita
@@ -5,21 +5,17 @@
     <shortdesc></shortdesc>
     <refbody>
         <section id="section_qf3_fyy_lyb">
-            <title/>
             <p>The following code is used for running
                 MDE:<codeblock id="codeblock_ug5_nvy_lyb">from altair.mde import GeneratePreview
 from altair.system import Fs, Content
 from altair.system import ActionExecOptions, WaitForActionCompletion
 
-# Specific where to run the MDE i.e on which Appliance
-        execOptions = ActionExecOptions(execEnvFilter={"path": "$.name", "value": "Sessions"})
+<b># Specific where to run the MDE i.e on which Appliance</b>
+execOptions = ActionExecOptions(execEnvFilter={"path": "$.name", "value": "Sessions"})
 
-# Execute Preview Gen MDE for the given model file
-        mdeAction = await GeneratePreview(inputFile=modelFile.getRef(), session=session, execOptions=execOptions)
-
-# The metadata gets extracted in HPC appliance and its applied on the given input file.
-</codeblock></p>
-            <p>An example of the code that is executed in the UI:</p>
+<b># Execute Preview Gen MDE for the given model file</b>
+mdeAction = await GeneratePreview(inputFile=modelFile.getRef(), session=session, execOptions=execOptions)</codeblock></p>
+            <p>You can achieve this in the UI using View Definition file:</p>
             <p>
                 <fig id="fig_oq5_svy_lyb">
                     <title/>
@@ -27,6 +23,7 @@ from altair.system import ActionExecOptions, WaitForActionCompletion
                         id="image_csp_tvy_lyb"/>
                 </fig>
             </p>
+            <p>The result of the file metadata will be displayed.</p>
             <p>
                 <fig id="fig_bly_tvy_lyb">
                     <title/>
